# mini-cmake-qt

./: .clang-format  CMakeLists.txt  README.md  example.qrc
res/: main.qml
src/: Theme.cpp  Theme.hpp  ThemeManager.cpp  ThemeManager.h  main.cpp
